[package]
name = "testy"
version = "0.1.0"
authors = ["Robin Hübner <profan@prfn.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 2
overflow-checks = true
debug-assertions = true
panic = "abort"
debug = false
codegen-units = 8
lto = false
incremental = true

[dependencies]
bevy = "0.2.1"
rand = "0.7.3"
